infra/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}


resource "aws_ecr_repository" "api" {
  name                 = "portfolio-api" # The name that will appear in AWS Console
  image_tag_mutability = "MUTABLE"

  image_scanning_configuration {
    scan_on_push = true
  }
}

# VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = { 
    Name = "portfolio-vpc" 
    }
}

resource "aws_subnet" "public_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  tags = { 
    Name = "public-a" 
  }
}

resource "aws_subnet" "public_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"
  tags = { 
    Name = "public-b" 
    }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "a" { 
    subnet_id = aws_subnet.public_a.id 
    route_table_id = aws_route_table.public.id 
}

resource "aws_route_table_association" "b" { 
    subnet_id = aws_subnet.public_b.id 
    route_table_id = aws_route_table.public.id 
}

# Security Group
resource "aws_security_group" "alb" {
  vpc_id = aws_vpc.main.id
  ingress { 
    from_port = 80 
  to_port = 80; protocol = "tcp" 
  cidr_blocks = ["0.0.0.0/0"] 
  }

  egress { 
    from_port = 0 
    to_port = 0 
    protocol = "-1" 
    cidr_blocks = ["0.0.0.0/0"] 
    }
  tags = { 
    Name = "alb-sg" 
    }
}

resource "aws_security_group" "ecs" {
  vpc_id = aws_vpc.main.id
  ingress { 
    from_port = 8080 
    to_port = 8080 
  protocol = "tcp" 
  security_groups = [aws_security_group.alb.id] 
  }

  egress { 
    from_port = 0; to_port = 0 
    protocol = "-1" 
    cidr_blocks = ["0.0.0.0/0"] 
    }

  tags = { 
    Name = "ecs-sg" 
    }
}
